--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ubuntu {
+  font-family: "Ubuntu" !important;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.ubuntu {
-  font-family: "Ubuntu";
 }
