--- a/src/components/Card/Cards.module.scss
+++ b/src/components/Card/Cards.module.scss
@@ -1,13 +1,18 @@
 $radius: 10px;
 
-.cards {
+.card {
   border: 2px solid #0b5ed7;
   border-radius: $radius;
+}
+
+.content {
+  padding: 10px;
 }
 
 .img {
   border-radius: $radius $radius 0 0;
 }
+
 .badge {
   top: 10px;
   right: 20px;
