--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,9 +1,9 @@
 .input {
   width: 40%;
-  border-radius: 8px;
   border: 2px solid #0b5ed7;
-  padding: 10px 15px;
+  border-radius: 8px;
   box-shadow: 1px 3px 9px rgba($color: #000000, $alpha: 0.25);
+  padding: 10px 15px;
   &:focus {
     outline: none;
   }
@@ -11,4 +11,9 @@
 
 .btn {
   box-shadow: 1px 3px 9px rgba($color: #000000, $alpha: 0.25);
+}
+@media (max-width: 576px) {
+  .input {
+    width: 80%;
+  }
 }
